Mention which typefaces are used for what

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -30,11 +30,10 @@
 \itshape
 The Revised Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
-with Metric Measures, \totalnfncs\ Textual Variants,\\
-\totalnfnsts\ Study Notes \&\ \totalfigures\ Illustrations\\[2ex]
+With \totalnfnsts\ Notes \&\ \totalfigures\ Illustrations\\[2ex]
 }
 Edited by Tigran Aivazian\\[2ex]
-\tunemarkuptwo{noquiz}{}{With Interactive Cosmic Citizenship Quiz\\(\totalcurqs\ questions in total)\\}
+\tunemarkuptwo{noquiz}{}{With Interactive Cosmic Citizenship Quiz\\Of \totalcurqs\ Questions\\}
 }%
 \ifmultivol
 \LARGE\bfseries\itshape
@@ -59,14 +58,7 @@ Edited by Tigran Aivazian\\[2ex]
 \vspace*{\stretch{0.3}}
 \begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\large}\bfseries\itshape ``One of the most important things in human living is to find out what Jesus believed, to discover his ideals, and to strive for the achievement of his exalted life purpose.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
-\tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
-\tunemarkup{pgkobomini}{\fontsize{9}{10}\itshape}
-\tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
-\tunemarkup{pgthinmob}{\fontsize{8}{10}\itshape}
-\tunemarkup{pgnexus10}{\fontsize{12}{16}\itshape}
-\tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
-\tunemarkup{pgcrownq}{\Large\itshape}
-\tunemarkup{pgafour}{\large\itshape}
+\infofontsize
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
 The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
@@ -74,13 +66,13 @@ The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
-\tunemarkuptwo{pgafour}{}{\small}\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2020 under Linux.\\
+\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2020 under Linux.\\
 English text set in {\bfseries\tunemarkup{garamond}{Adobe }\urantiamainfont\tunemarkup{garamond}{ Opticals}} at \urantiamainfontsize pt.\\
 Hebrew text set in {\bfseries\hebrewfontname.}\\
 Greek text set in {\bfseries\greekfontname.}\\
 Armenian text set in {\bfseries Tarumian GrqiBardzr.}\\
-Chinese text set in \textbf{\itshape\chinesefontname.}\\[10pt]
-\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7" Colour}\tunemarkup{pgnexus10}{10" Colour}\tunemarkup{pghanlin}{6" eInk}\tunemarkup{pgkobomini}{5" eInk}\tunemarkup{pgkoboaurahd}{7" eInk}\tunemarkup{pgkindledx}{10" eInk}\tunemarkup{pgauraone}{8" eInk}\\
+Chinese text set in {\bfseries\chinesefontname.}\\[10pt]
+\upshape\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7" Colour}\tunemarkup{pgnexus10}{10" Colour}\tunemarkup{pghanlin}{6" eInk}\tunemarkup{pgkobomini}{5" eInk}\tunemarkup{pgkoboaurahd}{7" eInk}\tunemarkup{pgkindledx}{10" eInk}\tunemarkup{pgauraone}{8" eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
 }
 \vspace*{\stretch{0.1}}
