Tidy up the TOC and the title page

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -18,16 +18,7 @@
 }%
 {%
 \vspace*{\stretch{0.1}}
-\tunemarkup{pghanlin}{\fontsize{10}{13}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgcrownq}{\fontsize{19}{24}\selectfont}
-\tunemarkup{pgafour}{\fontsize{21}{28}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
-\tunemarkup{pgthinmob}{\fontsize{10}{12}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{15}{22}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
-\tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
-\itshape
+\subsubtitlefontsize
 The Revised Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
 With \totalnfnsts\ Notes \&\ \totalfigures\ Illustrations\\[2ex]
@@ -42,7 +33,7 @@ Edited by Tigran Aivazian\\[2ex]
 %\ifvoliii Volume III: Papers 129--196\\\fi
 \fi
 \vspace*{\stretch{0.4}}
-\includegraphics[width=0.2\columnwidth]{images/Phoenix-Logo-Circles.jpg}\\
+\includegraphics[width=\phoenixscale\columnwidth]{images/Phoenix-Logo-Circles.jpg}\\
 \vspace*{\stretch{0.3}}
 \titlesepbig\\
 \vspace*{\stretch{0.1}}
