Fix the 6" eInk build and the TOC for 5" build

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -29,6 +29,7 @@
 \upapertitle{15}{The Seven Superuniverses}{Universal Censor}{p15}
 \upapertitle{16}{The Seven Master Spirits}{Universal Censor}{p16}
 \upapertitle{17}{The Seven Supreme Spirit Groups}{Divine Counsellor}{p17}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{18}{The Supreme Trinity Personalities}{Divine Counsellor}{p18}
 \upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
@@ -55,6 +56,7 @@
 \upapertitle{34}{The Local Universe Mother Spirit}{Mighty Messenger}{p34}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{35}{The Local Universe Sons of God}{Chief of Archangels}{p35}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{36}{The Life Carriers}{Vorondadek Son}{p36}
 \upapertitle{37}{Personalities of the Local Universe}{Brilliant Evening Star}{p37}
 \upapertitle{38}{Ministering Spirits of the Local Universe}{Melchizedek}{p38}
@@ -82,6 +84,7 @@
 \upapertitle{55}{The Spheres of Light and Life}{Mighty Messenger}{p55}
 \upapertitle{56}{Universal Unity}{\parbox[t]{0.3\linewidth}{Mighty Messenger and Machiventa Melchizedek}}{p56}
 \upartheader{3}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{57}{The Origin of Urantia}{Life Carrier}{p57}
 \upapertitle{58}{Life Establishment on Urantia}{Life Carrier}{p58}
 \upapertitle{59}{The Marine-Life Era on Urantia}{Life Carrier}{p59}
@@ -108,6 +111,7 @@
 \upapertitle{75}{The Default of Adam and Eve}{Solonia}{p75}
 \upapertitle{76}{The Second Garden}{Solonia}{p76}
 \upapertitle{77}{The Midway Creatures}{Archangel}{p77}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{78}{The Violet Race after the Days of Adam}{Archangel}{p78}
 \upapertitle{79}{Andite Expansion in the Orient}{Archangel}{p79}
 \upapertitle{80}{Andite Expansion in the Occident}{Archangel}{p80}
@@ -138,6 +142,7 @@
 \upapertitle{98}{The Melchizedek Teachings in the Occident}{Melchizedek}{p98}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{99}{The Social Problems of Religion}{Melchizedek}{p99}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
 \upapertitle{101}{The Real Nature of Religion}{Melchizedek}{p101}
 \upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
@@ -163,6 +168,7 @@
 \upapertitle{118}{Supreme and Ultimate — Time and Space}{Mighty Messenger}{p118}
 \upapertitle{119}{The Bestowals of Christ Michael}{Chief of Evening Stars}{p119}
 \upartheader{4}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{120}{The Bestowal of Michael on Urantia}{Mantutia Melchizedek}{p120}
 \upapertitle{121}{The Times of Michael’s Bestowal}{Midwayer Commission}{p121}
 \upapertitle{122}{Birth and Infancy of Jesus}{Midwayer Commission}{p122}
@@ -190,6 +196,7 @@
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{138}{Training the Kingdom’s Messengers}{Midwayer Commission}{p138}
 \upapertitle{139}{The Twelve Apostles}{Midwayer Commission}{p139}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{140}{The Ordination of the Twelve}{Midwayer Commission}{p140}
 \upapertitle{141}{Beginning the Public Work}{Midwayer Commission}{p141}
 \upapertitle{142}{The Passover at Jerusalem}{Midwayer Commission}{p142}
@@ -216,6 +223,7 @@
 \upapertitle{159}{The Decapolis Tour}{Midwayer Commission}{p159}
 \upapertitle{160}{Rodan of Alexandria}{Midwayer Commission}{p160}
 \upapertitle{161}{Further Discussions with Rodan}{Midwayer Commission}{p161}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{162}{At the Feast of Tabernacles}{Midwayer Commission}{p162}
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{163}{Ordination of the Seventy at Magadan}{Midwayer Commission}{p163}
@@ -245,6 +253,7 @@
 \upapertitle{182}{In Gethsemane}{Midwayer Commission}{p182}
 \upapertitle{183}{The Betrayal and Arrest of Jesus}{Midwayer Commission}{p183}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{184}{Before the Sanhedrin Court}{Midwayer Commission}{p184}
 \upapertitle{185}{The Trial Before Pilate}{Midwayer Commission}{p185}
 \upapertitle{186}{Just Before the Crucifixion}{Midwayer Commission}{p186}
