--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -7,13 +7,13 @@
 \pagestyle{empty}
 \include{tex/title}
 \newpage\pagestyle{fancy}
-\tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
+\tunemarkup{pghanlin}{\include{tex/paper-titles}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgthinmob}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgnexus10}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
 \tunemarkup{pgauraone}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
-\tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
+\tunemarkup{pgkobomini}{\include{tex/paper-titles}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\clp\include{tex/paper-titles}}
 \tunemarkup{pgcrownq}{\include{tex/paper-titles}}
