Don't set the TOC headers twice

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -10,9 +10,9 @@
 \tunemarkup{pghanlin}{\include{tex/paper-titles}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgthinmob}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
-\tunemarkup{pgnexus10}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
-\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
-\tunemarkup{pgauraone}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
+\tunemarkup{pgnexus10}{\include{tex/paper-titles}}
+\tunemarkup{pgkoboaurahd}{\include{tex/paper-titles}}
+\tunemarkup{pgauraone}{\include{tex/paper-titles}}
 \tunemarkup{pgkobomini}{\include{tex/paper-titles}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\clp\include{tex/paper-titles}}
