Fix TOC for A4 and include pdf type in metadata

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -59,12 +59,13 @@ The latest version of this book can be downloaded from:\\
 Please send all comments to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
 \tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2020 under Linux.\\
 English text set in {\bfseries\tunemarkup{garamond}{Adobe }\urantiamainfont\tunemarkup{garamond}{ Opticals}} at \urantiamainfontsize pt.\\
-Hebrew text set in {\bfseries\hebrewfontname.}\\
-Greek text set in {\bfseries\greekfontname.}\\
-Armenian text set in {\bfseries Tarumian GrqiBardzr.}\\
-Chinese text set in {\bfseries\chinesefontname.}\\[10pt]
-\upshape\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7" Colour}\tunemarkup{pgnexus10}{10" Colour}\tunemarkup{pghanlin}{6" eInk}\tunemarkup{pgkobomini}{5" eInk}\tunemarkup{pgkoboaurahd}{7" eInk}\tunemarkup{pgkindledx}{10" eInk}\tunemarkup{pgauraone}{8" eInk}\\
-\upshape\bfseries PDF date: \mytoday{}\\
+Hebrew text set in \textbf{\hebrewfontname}.\\
+Greek text set in \textbf{\greekfontname}.\\
+Armenian text set in \textbf{Tarumian GrqiBardzr}.\\
+Chinese text set in \textbf{\chinesefontname}.\\[10pt]
+\upshape\bfseries
+PDF type: \pdftype\\
+PDF date: \mytoday{}\\
 }
 \vspace*{\stretch{0.1}}
 \end{center}
