--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -672,6 +672,7 @@
 \def\pc{{\fontsize{13}{13}\selectfont§§}\kern3pt}
 
 \tunemarkup{pgkobomini}{%
+\newcommand{\pdftype}{5" eInk}
 \renewcommand{\uminitoc}[1]{}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12.6}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
@@ -707,6 +708,7 @@
 }
 
 \tunemarkup{pghanlin}{%
+\newcommand{\pdftype}{6" eInk}
 \renewcommand{\uminitoc}[1]{}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{9}{20}\selectfont}
@@ -743,6 +745,7 @@
 }
 
 \tunemarkup{pgkoboaurahd}{%
+\newcommand{\pdftype}{7" eInk}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{13.6}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{18}{23}\selectfont}
@@ -781,6 +784,7 @@
 }
 
 \tunemarkup{pgauraone}{%
+\newcommand{\pdftype}{8" eInk}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{15}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{20}{23}\selectfont}
@@ -817,6 +821,7 @@
 }
 
 \tunemarkup{pgnexus10}{%
+\newcommand{\pdftype}{10" Colour}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{17.3}{28}\selectfont}
 \newcommand{\offontsize}{\fontsize{14}{28}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{23}{30}\selectfont}
@@ -856,6 +861,7 @@
 }
 
 \tunemarkup{pgthinmob}{%
+\newcommand{\pdftype}{20:9 Colour}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12.1}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{16}{20}\selectfont}
@@ -892,6 +898,7 @@
 }
 
 \tunemarkup{pgnexus7}{%
+\newcommand{\pdftype}{16:9 Colour}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12.1}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{16}{20}\selectfont}
@@ -929,6 +936,7 @@
 }
 
 \tunemarkup{pgafour}{%
+\newcommand{\pdftype}{A4 B\&W}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{25.7}{34}\selectfont}
 \newcommand{\offontsize}{\fontsize{24}{34}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{34}{38}\selectfont}
@@ -948,9 +956,9 @@
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\fontsize{28}{28}\selectfont ahb}}
-\newcommand{\bibtocsuperheadfont}{\fontsize{32}{32}\selectfont}
-\renewcommand{\bibtocheadfont}{\fontsize{21}{21}\mdseries}
-\renewcommand{\bibtocfont}{\fontsize{15}{24}\selectfont}
+\newcommand{\bibtocsuperheadfont}{\fontsize{30}{30}\selectfont}
+\renewcommand{\bibtocheadfont}{\fontsize{19}{19}\mdseries}
+\renewcommand{\bibtocfont}{\fontsize{12.3}{20}\selectfont}
 \newcommand{\subfont}{\fontsize{19}{24}\itshape}
 \newcommand{\parttitlefontsize}{\parttitlefont\fontsize{24}{24}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{12}{15}\selectfont}
@@ -967,6 +975,7 @@
 }
 
 \tunemarkup{pgcrownq}{%
+\newcommand{\pdftype}{Crown Quarto B\&W}
 \newcommand{\offontsize}{\parttitlefont\fontsize{24}{34}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{30}{38}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{19}{24}\itshape}
@@ -1002,6 +1011,7 @@
 }
 
 \tunemarkup{pgkindledx}{%
+\newcommand{\pdftype}{10" eInk}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{20.8}{32}\selectfont}
 \newcommand{\offontsize}{\fontsize{16.5}{32}\selectfont}
 \newcommand{\booksubtitlefontsize}{\fontsize{25}{32}\selectfont}
@@ -1044,7 +1054,7 @@
   pdftitle={The British Study Edition of the Urantia Papers},%
   pdfauthor={Tigran Aivazian <aivazian.tigran@gmail.com>},%
   pdfcreator={Bibles.org.uk Typesetting Environment based on TeX Live 2020},%
-  pdfsubject={The Urantia Papers in British English},%
+  pdfsubject={The Urantia Papers (\pdftype)},%
   pdfkeywords={Earth,Urantia,Truth,History,Religion,Revelation,God,Jesus,Christianity,Bible,Scriptures,Koran,Islam,Judaism,Torah},%
   pdflang={English},%
   pdfcreationdate={D:20110713102733Z},%
