--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -116,7 +116,7 @@
 \vs p000 5:9 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit.} The divine spirit that indwells the mind of man --- the Thought Adjuster. This immortal spirit is prepersonal --- not a personality, though destined to become a part of the personality of the surviving mortal creature.
 \vs p000 5:10 \ublistelem{4.}\bibnobreakspace \bibemph{Soul.} The soul of man is an experiential acquirement. As a mortal creature chooses to “do the will of the Father in heaven,” so the indwelling spirit becomes the father of a \bibemph{new reality} in human experience. The mortal and material mind is the mother\fnst{The words \bibemph{matter} and \bibemph{mother} have the same origin, namely from the Latin \bibemph{mater} and Greek \textgreek{μήτηρ} meaning `mother'.} of this same emerging reality. The substance of this new reality is neither material nor spiritual --- it is \bibemph{morontial.} This is the emerging and immortal soul which is destined to survive mortal death and begin the Paradise ascension.
 \vs p000 5:11 \pc \bibemph{Personality.} The personality of mortal man is neither body, mind, nor spirit; neither is it the soul. Personality is the one changeless reality in an otherwise ever\hyp{}changing creature experience; and it unifies all other associated factors of individuality. The personality is the unique bestowal which the Universal Father makes upon the living and associated energies of matter, mind, and spirit, and which survives with the survival of the morontial soul.
-\vs p000 5:12 \pc \bibemph{Morontia} is a term designating a vast level intervening between the material and the spiritual. It may designate personal or impersonal realities, living or nonliving energies. The warp of morontia\fnst{The word `morontia' is composed of `matter' plus `moral'. Apart from the Editor's personal experience, the proof of this is given in the footnote to \bibref[112:3.2]{p112 3:2}.} is spiritual; its woof is physical.
+\vs p000 5:12 \pc \bibemph{Morontia} is a term designating a vast level intervening between the material and the spiritual. It may designate personal or impersonal realities, living or nonliving energies. The warp of morontia\fnst{The word ``morontia'' is composed of ``matter'' plus ``moral''. In addition to the present Editor's personal experience, the proof of this connection is given in the footnote to \bibref[112:3.2]{p112 3:2}. The link with the Greek word \textgreek{μάρανσις} ``cause to die away'', ``dying or fading away'' is also important here. And the medical term \textgreek{μαρασμός}, whence the English ``marasmus'' and ``marasmic'' come, is synonymous with \textgreek{μάρανσις}. It was used by the great \bibemph{Galen} in the II century A.D.} is spiritual; its woof is physical.
 \usection{Energy and Pattern}
 \vs p000 6:1 Any and all things responding to the personality circuit of the Father, we call personal. Any and all things responding to the spirit circuit of the Son, we call spirit. Any and all that responds to the mind circuit of the Conjoint Actor, we call mind, mind as an attribute of the Infinite Spirit --- mind in all its phases. Any and all that responds to the material\hyp{}gravity circuit centring in nether Paradise, we call matter --- energy\hyp{}matter in all its metamorphic states.
 \vs p000 6:2 \pc ENERGY we use as an all\hyp{}inclusive term applied to spiritual, mindal, and material realms. \bibemph{Force} is also thus broadly used. \bibemph{Power} is ordinarily limited to the designation of the electronic level of material or linear\hyp{}gravity\hyp{}responsive matter in the grand universe. Power is also employed to designate sovereignty. We cannot follow your generally accepted definitions of force, energy, and power. There is such paucity of language that we must assign multiple meanings to these terms.
