Semibold section titles

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -87,7 +87,7 @@
 \def\urantiamainfont{Garamond Premier Pro}
 \def\urantiaauthorfont{PF DaVinci Script Pro}
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
-\def\urantiaheaderfont{Garamond Premier Pro Medium Caption}
+\def\urantiaheaderfont{Garamond Premier Pro Semibold Caption}
 }
 
 % Samsung Galaxy A70 20:9 aspect ratio
